Fix CSS on mobile
Former-commit-id: 99044c2fed688708493d0313471b7e23d25d52c1

--- a/static/app.css
+++ b/static/app.css
@@ -5,8 +5,9 @@ body {
 section {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 50px 1fr 50px 1fr;
-  grid-template-areas: "sql-tabs"
+  grid-template-rows: 50px 50px calc((100vh - 150px) / 2) 50px calc((100vh - 150px) / 2);
+  grid-template-areas: "buttons"
+                       "sql-tabs"
                        "sql"
                        "code-tabs"
                        "code";
@@ -29,7 +30,7 @@ ul {
 .pane {
   background-color: white;
   overflow: scroll;
-  height: 50vh;
+  height: calc((100vh - 150px) / 2);
 }
 
 #query {
@@ -94,8 +95,9 @@ ul.tabs li a.selected {
 @media (min-width: 1200px) {
   section {
     grid-template-columns: 50vw 50vw;
-    grid-template-rows: 50px calc(100vh - 50px);
-    grid-template-areas: "sql-tabs code-tabs"
+    grid-template-rows: 50px 50px calc(100vh - 100px);
+    grid-template-areas: "buttons buttons"
+                         "sql-tabs code-tabs"
                          "sql code";
   }
 
